--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 		"nodemon": "^3.1.10"
 	},
 	"dependencies": {
+		"@slack/web-api": "^7.9.2",
+		"body-parser": "^2.2.0",
 		"canvas": "^3.1.0",
+		"express": "^5.1.0",
 		"flipdisc": "^0.0.17"
 	}
 }
