--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"body-parser": "^2.2.0",
 		"canvas": "^3.1.0",
 		"express": "^5.1.0",
-		"flipdisc": "^0.0.17"
+		"@owowagency/flipdot-emu": "file:packages/owowagency-flipdot-emu-1.0.0.tgz"
 	},
 	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
